--- a/hero-image.html
+++ b/hero-image.html
@@ -1,10 +1,9 @@
 <div class = "hero-container">
 <div class="hero-image"> 
   <div class="image-text">
-    <div class="VP-top">VICTORIA</div>
-    <div class="VP-bottom">PEECHATT</div>
+    <div class="VP-top"></div>
+    <div class="VP-bottom"></div>
     <div class="VP-byline">
-      PhD candidate
     </div>
   </div>
   <div class="credit-text">
