about page and more added

--- a/hero-image.html
+++ b/hero-image.html
@@ -8,7 +8,8 @@
   </div>
   <div class="credit-text">
     <span class = "VP-species-credit">
-      Variable checkerspot (<i>Euphydryas chalcedona</i>)<br>
+      Variable checkerspot (<i>Euphydryas chalcedona</i>) on<br>
+      Bush beardtongue (<i>Keckiella breviflora</i>)<br>
     </span>
   </div>
 </div>
